test/assignment/to_this.lox
struct Foo {
  fn Foo() {
    self = "value" // error: invalid assignment target
  }
}

Foo()
